--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ pyarrow = "<12"
 fsspec = "^2023.6.0"
 boto3 = "1.26.76"
 s3fs = "^2023.6.0"
+prefect = "2.10.8"
+prefect-aws = "0.3.1"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
